[tool.poetry]
name = "your-bot"
version = "0.1.0"
description = "Telegram bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0b7"
aiohttp = "3.8.6"
python-dotenv = "^1.0.0"
redis = "^4.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
